--- a/teXXmo/Views/Home/Sensor.cshtml
+++ b/teXXmo/Views/Home/Sensor.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Sensor Data";
-    ViewData["Message"] = "The data from the sensors is obtained here"
+    ViewData["Message"] = "The data from the sensors is obtained here";
 }
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
